Fix squashed landing page screenshot on Safari. (#244)

--- a/assets/less/base/sizing.less
+++ b/assets/less/base/sizing.less
@@ -34,6 +34,12 @@ each(@min-heights, #(@k, @v) {
   }
 });
 
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  .platform-img {
+     height: 100%;
+  }
+}
+
 each(@breakpoints, #(@k, @v) {
   @media (min-width: @k) {
     each(@widths, #(@i, @r) {
